devrooms: Add CfP for Open Media and Decentralised Internet

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -79,8 +79,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2016-October/002470.html
         deadline: 2016-11-25
     'Decentralised Internet':
-        ann:
-        deadline:
+        ann: https://lists.fosdem.org/pipermail/fosdem/2016-November/002495.html
+        deadline: 2016-12-04
     'Desktops':
         ann: https://lists.fosdem.org/pipermail/fosdem/2016-October/002477.html
         deadline: 2016-12-05
@@ -106,8 +106,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2016-October/002460.html
         deadline: 2016-12-04
     'Open Media':
-        ann:
-        deadline:
+        ann: https://lists.fosdem.org/pipermail/fosdem/2016-November/002494.html
+        deadline: 2016-12-01
     'Open Source Design':
         ann: http://opensourcedesign.net/events/2017/02/05/opensourcedesign-fosdem-2017
         deadline: 2016-12-01
