--- a/config.yaml
+++ b/config.yaml
@@ -170,10 +170,10 @@ pentabarf:
     height: 200
 
 keysigning:
-  submission_deadline: 2017-01-24
+  submission_deadline: 2017-01-27
   homework_due: 2017-04-30
   # Change these when the submission window opens/closes.
-  submission_notyet: true
+  submission_notyet: false
   submission_closed: false
   # Change this when the list of keys is published.
   list_published: false
