--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -20,6 +20,7 @@ footer:
     - Archives: /archives
   - This year:
     - /schedule
+    - /stands
     - /certification
     - /keysigning
     - /fringe
