--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -49,6 +49,14 @@ events:
         registration: Required
         website: http://lefred.be/content/pre-fosdem17-mysql-day/
         contact: frederic.descamps@oracle.com
+    'Bytenight':
+        location: Brussels
+        start: 2017-02-04
+        end: 2017-02-05
+        cost: Free
+        registration: None.
+        website: https://hsbxl.be/Bytenight_2017
+        contact: contact@hackerspace.be
     'Linux-sunxi dinner':
         location: Brussels
         start: 2017-02-04
