fringe: add source{d} beer payback

--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -65,6 +65,14 @@ events:
         registration: Required (send e-mail)
         website: https://groups.google.com/forum/#!topic/linux-sunxi/afFMBIR2m_o
         contact: zoobab@gmail.com
+    'source{d} beer payback':
+        location: Brussels
+        start: 2017-02-04
+        end: 2017-02-04
+        cost: Free
+        registration: None.
+        website: https://www.meetup.com/srcd-tech-talks/events/237043683/
+        contact: mcuadros@sourced.tech
     'Buildroot Developer Days':
         location: Brussels
         start: 2017-02-06
