fringe: update GNOME Beers location

--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -58,7 +58,7 @@ events:
         website: https://hsbxl.be/Bytenight_2017
         contact: contact@hackerspace.be
     'GNOME Beers':
-        location: A La Bécasse
+        location: Brussels
         start: 2017-02-04
         end: 2017-02-04
         cost: Free
