menu: Add beer event link

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -23,6 +23,7 @@ footer:
     - /stands
     - /certification
     - /keysigning
+    - /beerevent
     - /fringe
   - Practical information:
     - Getting there: /practical/transportation
