expose some missing pages in the Practical category

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -30,6 +30,8 @@ footer:
     - /practical/accessibility
     - /practical/accommodation
     - /practical/conduct
+    - /practical/services
+    - /practical/jobcorner
   - Media and press:
     - /interviews
     - Video recordings: 'http://video.fosdem.org/'
