--- a/config.yaml
+++ b/config.yaml
@@ -138,15 +138,15 @@ watcher:
 deploy:
   public:
     kind: rsync
-    dst:  "www-public@www-public.fosdem.org:/www/fosdem.org/public/2017"
+    dst:  "www-public@www-public.fosdem.org:/www/fosdem.org/public/2018"
     options: [ '-avzP', '--delete-after' ]
   default:
     kind: rsync
-    dst:  "www-staging@www-public.fosdem.org:/www/staging.fosdem.org/public/2017"
+    dst:  "www-staging@www-public.fosdem.org:/www/staging.fosdem.org/public/2018"
     options: [ '-avzP', '--delete-after' ]
 
 pentabarf:
-  conference_id: FOSDEM17
+  conference_id: FOSDEM18
   username: nanoc
   #password: 
   database: pentabarf
@@ -170,13 +170,13 @@ pentabarf:
     height: 200
 
 keysigning:
-  submission_deadline: 2017-01-27
-  homework_due: 2017-04-30
+  submission_deadline: 2018-01-24
+  homework_due: 2018-04-30
   # Change these when the submission window opens/closes.
-  submission_notyet: false
-  submission_closed: true
+  submission_notyet: true
+  submission_closed: false
   # Change this when the list of keys is published.
-  list_published: true
+  list_published: false
 
 deadlines:
   lightningtalks:
